@@ -4,7 +4,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.gdg.zipte_gdg.api.controller.page.request.PageRequestDto;
 import org.gdg.zipte_gdg.api.controller.review.request.ReviewRequestDto;
-import org.gdg.zipte_gdg.api.service.comment.response.CommentResponseDto;
+import org.gdg.zipte_gdg.api.service.comment.response.CommentResponseWithReviewDto;
 import org.gdg.zipte_gdg.api.service.page.response.PageResponseDto;
 import org.gdg.zipte_gdg.api.service.review.response.ReviewResponseDto;
 import org.gdg.zipte_gdg.api.service.review.response.ReviewResponseWithCommentDto;
@@ -12,6 +12,7 @@ import org.gdg.zipte_gdg.domain.comment.Comment;
 import org.gdg.zipte_gdg.domain.member.Member;
 import org.gdg.zipte_gdg.domain.member.MemberRepository;
 import org.gdg.zipte_gdg.domain.review.Review;
+import org.gdg.zipte_gdg.domain.review.ReviewImage;
 import org.gdg.zipte_gdg.domain.review.ReviewRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -20,8 +21,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -32,6 +32,7 @@ public class ReviewServiceImpl implements ReviewService {
 
     private final ReviewRepository reviewRepository;
     private final MemberRepository memberRepository;
+    private final ReviewImageService reviewImageService;
 
     @Override
     public ReviewResponseDto register(ReviewRequestDto reviewRequestDto) {
@@ -39,7 +40,14 @@ public class ReviewServiceImpl implements ReviewService {
         Review review = Review.addNewReview(member, reviewRequestDto.getTitle(), reviewRequestDto.getContent());
 
         Review savedReview = reviewRepository.save(review);
-        return entityToDto(savedReview);
+
+        List<String> uploads = reviewImageService.saveFiles(savedReview, reviewRequestDto.getFiles());
+
+
+        ReviewResponseDto reviewResponseDto = entityToDto(savedReview);
+        reviewResponseDto.setUploadFileNames(uploads);
+
+        return reviewResponseDto;
     }
 
     private Member getMember(ReviewRequestDto reviewRequestDto) {
@@ -51,25 +59,29 @@ public class ReviewServiceImpl implements ReviewService {
     public ReviewResponseWithCommentDto getOne(Long reviewId) {
 
         Review review = reviewRepository.findById(reviewId).orElseThrow();
+
         ReviewResponseWithCommentDto reviewResponseDto = entityToCommentDto(review);
 
-
         List<Comment> commentsWithReview = reviewRepository.findCommentsWithReview(reviewId);
+        List<ReviewImage> reviewImages = reviewRepository.selectReviewImages(reviewId);
+
 
         // 댓글을 DTO로 변환합니다.
-        List<CommentResponseDto> commentResponseDtos = commentsWithReview.stream()
+        List<CommentResponseWithReviewDto> commentResponseDtos = commentsWithReview.stream()
                 .map(this::commentEntityToDto) // 댓글 엔티티를 DTO로 변환하는 메서드를 호출합니다.
                 .collect(Collectors.toList());
 
         // 리뷰 DTO에 댓글을 설정합니다.
         reviewResponseDto.setComments(commentResponseDtos);
+        reviewResponseDto.setUploadFileNames(reviewImages.stream().map(ReviewImage::getFileName).collect(Collectors.toList()));
 
         return reviewResponseDto;
     }
 
-    private CommentResponseDto commentEntityToDto(Comment comment) {
-        return CommentResponseDto.builder()
+    private CommentResponseWithReviewDto commentEntityToDto(Comment comment) {
+        return CommentResponseWithReviewDto.builder()
                 .id(comment.getId())
+                .memberId(comment.getMember().getId())
                 .author(comment.getMember().getUsername())
                 .content(comment.getContent())
                 .createdAt(comment.getCreatedAt())
@@ -83,13 +95,20 @@ public class ReviewServiceImpl implements ReviewService {
 
         Pageable pageable = PageRequest.of(pageRequestDto.getPage()-1, pageRequestDto.getSize(), Sort.by("id").descending());
 
-        Page<Review> result = reviewRepository.findAll(pageable);
+        Page<Object[]> result = reviewRepository.selectList(pageable);
         log.info(result);
 
-        // Review 엔티티를 ReviewResponseDto로 변환
-        List<ReviewResponseDto> dtoList = result.stream()
-                .map(this::entityToDto)  // entityToDto 메서드 사용
-                .collect(Collectors.toList());
+
+        List<ReviewResponseDto> dtoList = result.get().map(arr -> {
+            Review review = (Review) arr[0];
+            ReviewImage reviewImage = (ReviewImage) arr[1];
+
+            String imageStr = (reviewImage != null) ? reviewImage.getFileName() : "No image found";
+            ReviewResponseDto dto = entityToDto(review);
+            dto.setUploadFileNames(Collections.singletonList(imageStr));
+
+            return dto;
+        }).toList();
 
         long total = result.getTotalElements();
 
@@ -107,11 +126,20 @@ public class ReviewServiceImpl implements ReviewService {
         Page<Review> result = reviewRepository.findReviewsByMemberId(memberId, pageable);
 
         log.info(result);
-
         // Review 엔티티를 ReviewResponseDto로 변환
         List<ReviewResponseDto> dtoList = result.stream()
                 .map(this::entityToDto)  // entityToDto 메서드 사용
                 .collect(Collectors.toList());
+
+        dtoList.forEach(dto->{
+
+
+            ReviewImage reviewImage = reviewRepository.selectReviewImagesthumbnail(dto.getId());
+
+            String imageStr = (reviewImage != null) ? reviewImage.getFileName() : "No image found";
+
+            dto.setUploadFileNames(Collections.singletonList(imageStr));
+        });
 
         long total = result.getTotalElements();
 
